# noteforge

./: .gitignore  Cargo.toml  README.md
crates/nf-app/: Cargo.toml
crates/nf-app/src/: main.rs
crates/nf-core/: Cargo.toml
crates/nf-core/src/: error.rs  lib.rs  link.rs  note.rs  span.rs  tag.rs  vault.rs
crates/nf-editor/: Cargo.toml
crates/nf-editor/src/: lib.rs
crates/nf-graph/: Cargo.toml
crates/nf-graph/src/: lib.rs
crates/nf-index/: Cargo.toml
crates/nf-index/src/: lib.rs
crates/nf-markdown/: Cargo.toml
crates/nf-markdown/src/: incremental.rs  lib.rs
crates/nf-plugin/: Cargo.toml
crates/nf-plugin/examples/word-count/: plugin.toml
crates/nf-plugin/src/: lib.rs
crates/nf-plugin/wit/: plugin.wit
crates/nf-render/: Cargo.toml
crates/nf-render/src/: lib.rs
crates/nf-vault/: Cargo.toml
crates/nf-vault/src/: lib.rs
crates/nf-vaultgen/: Cargo.toml
crates/nf-vaultgen/src/: corpus.rs  ir.rs  lib.rs  main.rs  manifest.rs  profiles.rs  serialize.rs  topology.rs  verify.rs
crates/nf-vaultgen/tests/: integration.rs
crates/nf-workspace/: Cargo.toml
crates/nf-workspace/src/: lib.rs
docs/: verification-log.md  产品说明书.md  部署说明书.md
docs/.noteforge/: config.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AboutDialog.tsx  CommandPalette.tsx  DropdownMenu.tsx  EditorPane.tsx  FileTree.tsx  QuickSwitcher.tsx  SearchPanel.tsx  SettingsDialog.tsx  StatusBar.tsx  Toolbar.tsx  WikilinkAutocomplete.tsx
frontend/src/layout/: LayoutState.ts
frontend/src/plugins/: HEPlugin.ts  PluginManager.ts
frontend/src/styles/: global.css
pkg/manjaro/: PKGBUILD  README-安装说明.md  nf-vaultgen-0.1.0-1-x86_64.pkg.tar.zst  nf-vaultgen.install  noteforge-0.1.0-1-x86_64.pkg.tar.zst  noteforge.install
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  main.rs.bak
