[package]
name = "nf-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nf-core = { path = "../nf-core" }
nf-vault = { path = "../nf-vault" }
nf-markdown = { path = "../nf-markdown" }
nf-render = { path = "../nf-render" }
clap.workspace = true
anyhow.workspace = true
