[package]
name = "nf-vault"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nf-core = { path = "../nf-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
nf-vaultgen = { path = "../nf-vaultgen" }
tempfile = "3"
