[package]
name = "nf-vaultgen"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nf-core = { path = "../nf-core" }
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
rand_chacha.workspace = true
clap.workspace = true
sha2.workspace = true
walkdir.workspace = true
anyhow.workspace = true
chrono.workspace = true
toml.workspace = true
tempfile = "3"
